# Machine-Learning

./: .gitignore  README.md
applied_machine_learning/: LR_model.pkl  cleaning_data.ipynb  logistic_regression.ipynb  train_test_validation_split.ipynb
resnet/: CMakeLists.txt  download_dataset.py  example_import.py  model.py  train.py
resnet/src/: cpp_api_example.cpp
